RESOLVED FIXED314997
(313296@main) ASSERTION FAILED: m_samples.decodeOrder().findSampleWithDecodeKey
https://bugs.webkit.org/show_bug.cgi?id=314997
Summary (313296@main) ASSERTION FAILED: m_samples.decodeOrder().findSampleWithDecodeKey
Jean-Yves Avenard [:jya]
Reported 2026-05-17 20:56:51 PDT
``` ASSERTION FAILED: m_samples.decodeOrder().findSampleWithDecodeKey(DecodeOrderSampleMap::KeyType(sample.decodeTime(), sample.presentationTime())) == m_samples.decodeOrder().end() /Volumes/Data/worker/macOS-Tahoe-Debug-Build-EWS/build/Source/WebCore/platform/graphics/TrackBuffer.cpp(132) : void WebCore::TrackBuffer::addSample(MediaSample &) 1 0x307f764e0 WebCore::TrackBuffer::addSample(WebCore::MediaSample&) 2 0x3007e9428 WebCore::MediaPlayerPrivateWebM::didProvideMediaDataForTrackId(WTF::Ref<WebCore::MediaSampleAVFObjC, WTF::RawPtrTraits<WebCore::MediaSampleAVFObjC>, WTF::DefaultRefDerefTraits<WebCore::MediaSampleAVFObjC>>&&, unsigned long long, WTF::String const&) 3 0x300809320 WebCore::MediaPlayerPrivateWebM::MediaPlayerPrivateWebM(WebCore::MediaPlayer&)::$_2::operator()(WTF::Ref<WebCore::MediaSampleAVFObjC, WTF::RawPtrTraits<WebCore::MediaSampleAVFObjC>, WTF::DefaultRefDerefTraits<WebCore::MediaSampleAVFObjC>>&&, unsigned long long, WTF::String const&) const ``` Regression from 313296@main bug 314723
Attachments
Radar WebKit Bug Importer
Comment 1 2026-05-17 20:56:57 PDT
Jean-Yves Avenard [:jya]
Comment 2 2026-05-17 20:57:56 PDT
313296@main exposed a real bug, demuxed frames would have been silently dropped, luckily here they were all audio samples , but such error could lead to real decoding errors.
Jean-Yves Avenard [:jya]
Comment 3 2026-05-17 21:09:59 PDT
EWS
Comment 4 2026-05-18 07:11:38 PDT
Committed 313413@main (57e44bb6ce39): <https://commits.webkit.org/313413@main> Reviewed commits have been landed. Closing PR #65086 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.